RESOLVED FIXED312762
REGRESSION(311425@main) [GTK][WPE] Bring back A420 video support
https://bugs.webkit.org/show_bug.cgi?id=312762
Summary REGRESSION(311425@main) [GTK][WPE] Bring back A420 video support
Carlos Garcia Campos
Reported 2026-04-20 03:22:46 PDT
I removed this by mistake in 311425@main which broke imported/w3c/web-platform-tests/html/semantics/embedded-content/the-video-element/resize-during-playback.html
Attachments
Carlos Garcia Campos
Comment 1 2026-04-20 03:25:49 PDT
Claudio Saavedra
Comment 2 2026-04-20 04:01:20 PDT
*** Bug 312631 has been marked as a duplicate of this bug. ***
EWS
Comment 3 2026-04-21 01:53:44 PDT
Committed 311662@main (18f0a358416b): <https://commits.webkit.org/311662@main> Reviewed commits have been landed. Closing PR #63107 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.