REGRESSION(311425@main) [GTK][WPE] Bring back A420 video support https://bugs.webkit.org/show_bug.cgi?id=312762

Reviewed by Nikolas Zimmermann.

Add A420 to the list of supported YUV formats.

Fixes imported/w3c/web-platform-tests/html/semantics/embedded-content/the-video-element/resize-during-playback.html

* LayoutTests/platform/glib/TestExpectations:
* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedPlatformLayerBufferVideo.cpp:
(WebCore::yuvFormatFromGstVideoFormat):
(WebCore::CoordinatedPlatformLayerBufferVideo::createBufferFromGLMemory):
(WebCore::CoordinatedPlatformLayerBufferVideo::createBufferFromMappedFrameIfNeeded):
* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedPlatformLayerBufferYUV.h:

Canonical link: https://commits.webkit.org/311662@main